Revert "try to break things"
This reverts commit dc37bbb65d222643cf34a0951b6d6ba2af2a06de.

--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -5,6 +5,10 @@ metadata:
     app.tanzu.vmware.com/workload-type: web
   name: zach
 spec:
+  build:
+    env:
+      - name: CGO_ENABLED
+        value: "0"
   serviceAccountName: cartographer-example-basic-sc-sa
   source:
     git:
